--- a/packages/examples/index.html
+++ b/packages/examples/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <div id="main"></div>
-        <script src="index.tsx"></script>
+        <script src="src/index.tsx"></script>
     </body>
 </html>
